# AIMLAB-VR-DataStreamer

./: .gitignore  APP_VISUAL_GUIDE.md  BUILD_GUIDE.md  BUILD_SUCCESS_SUMMARY.md  CMakeLists.txt  DATA_COLLECTOR_README.md  DATA_PORT_FIX_v2.7.md  ELECTRON_APP_SUMMARY.md  ELECTRON_PROJECT_INDEX.md  ENOTDIR_FIX_v2.9.md  EXECUTABLE_INFO.md  EXPERIMENTALDATA_v3.0.md  EXPERIMENT_CONTROL_v2.8.md  EXPERIMENT_ID_TO_UNITY_v3.5.md  EXPERIMENT_RECORDING_v3.3.md  FINAL_FIX_v2.5_SUMMARY.md  FINAL_POLISH_v3.1.md  FINAL_STATUS_v2.1.md  FINAL_UI_v3.1.md  FINAL_v2.7_ALL_FIXED.md  FIXES_v2.1_README.md  FIXES_v2.2_FINAL.md  ICON_UPDATE_v3.1.md  IMPLEMENTATION_v4.0.md  LEFT_RIGHT_HAND_v3.4.md  LOCKED_WINDOW_v3.1.md  NEXT_STEPS.md  POLISH_v3.1_FINAL.md  PORT_FIX_v2.3.md  PROTOCOL_FIX_v2.4.md  QUICK_REFERENCE_v4.0.md  QUICK_START.md  QUICK_START_ELECTRON.md  QUICK_START_v2.0.md  QUICK_START_v2.3.md  QUICK_SUMMARY_v3.3.md  README.md  README_ELECTRON.md  READY_TO_TEST_v2.6.md  RECORDING_REMOVAL_v3.2.md  (+27 more)
CSharp_File/: AIMLABVRDataStreamer.cs
Old/: FIXES_APPLIED.md  Makefile  README.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_TROUBLESHOOTING.md  aimlab_network_python.py  build_simple.ps1  build_windows.bat  build_windows.ps1  run_both.bat  run_demo.sh
Old/minimal_test/: README.md  udp_chat_node1_v2.cpp
Old/minimal_test/C-Sharp-Package/: AIMLABVRDataStreamer.cs  AIMLABVRDataStreamer_Modern.cs  aimlab_vr_datastreamer.cpp  aimlab_vr_datastreamer_fixed.cpp  aimlab_vr_datastreamer_simple.cpp  compile_aimlab_v2.bat
Old/minimal_test/C-Sharp-Package - GUI/: .gitignore  AIMLABVRDataStreamer_Legacy.cs  compile_aimlab_v2.bat
Old/minimal_test/C-Sharp-Package - GUI/MotorController/: BUGFIX_v6.1.md  FONT_IMPLEMENTATION_v5.2.md  IMPLEMENTATION_SUMMARY_v6.0.md  QUICKSTART_VR_STREAMER.md  QUICK_REFERENCE.md  README.md  README_SDL2.md  README_VR_DATA_STREAMER.md  README_v6.2.md  SDL2_MIGRATION_GUIDE.md  SDL2_REIMPLEMENTATION_COMPLETE.md  SERIAL_PROTOCOL.md  SETUP_GUIDE.md  UPGRADE_GUIDE_v6.2.md  V6.1_VS_V6.2_COMPARISON.md  V6.2_IMPLEMENTATION_COMPLETE.md  VERSION_STATUS.md  build.bat  build_v6.2.bat  imgui.ini  main_backup_v6.1.cpp  main_v6.2.cpp
Old/minimal_test/C-Sharp-Package - GUI/aimlab_data/: UUU
Old/simplified/: Arduino_Vibration_Controller.ino  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_OVERVIEW.md  PROTOCOL_FIX_NOTES.md  QUICK_START.md  README.md  SETUP_GUIDE.md  Unity_VRDataStreamer.cs  analyze.bat  analyze_vr_data.py  build.bat  main.cpp  requirements.txt  verify_setup.bat
config/: default_config.json
data/: .gitkeep
docs/: API_REFERENCE.md  BUILD_INSTRUCTIONS.md  USAGE_GUIDE.md
examples/: CMakeLists.txt  advanced_streaming_example.cpp  basic_streaming_example.cpp  network_receiver_example.cpp
include/aimlab-vr-datastreamer/: Config.h  DataPacket.h  Logger.h  NetworkManager.h  Types.h  VRDataStreamer.h  VRDevice.h
minimal_test/: compile.bat  compile_v2.bat  udp_chat_node1.cpp  udp_chat_node2.cpp  udp_chat_node2_v2.cpp
minimal_test/C-Sharp-Package/: AIMLAB_Streamer_Unity_Package.unitypackage  README_AIMLAB.md  compile_aimlab.bat  csharp3.cs
minimal_test/C-Sharp-Package - GUI/: AIMLABVRDataStreamer.cs  CLEANUP_SUMMARY.md  README_AIMLAB.md  REPOSITORY_STRUCTURE.md  SDL2_IMPLEMENTATION_SUMMARY.md  SDL2_REIMPLEMENTATION_COMPLETE.md  V2_UPDATE_SUMMARY.md  aimlab_vr_datastreamer.cpp  compile_aimlab_v2.bat
minimal_test/C-Sharp-Package - GUI/MotorController/: BUGFIX_v5.1.md  FONT_ATLAS_FIX.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  QUICKSTART_SDL2.md  README.md  SDL2_IMPLEMENTATION_SUMMARY.md  SDL2_MIGRATION_SUMMARY.md  WIN32_IMPLEMENTATION.md  build.bat  download_glfw.ps1  download_imgui_sdl2_backends.ps1  download_sdl2.ps1  imgui.ini  main.cpp  main_win32_backup.cpp
minimal_test/C-Sharp-Package - GUI/aimlab_data/: Github.html  Hello There
minimal_test/C-Sharp-Package/aimlab_data/: Hi  Hi2
src/: Config.cpp  DataPacket.cpp  Logger.cpp  NetworkManager.cpp  VRDataStreamer.cpp  VRDevice.cpp
tests/: CMakeLists.txt  test_datapacket.cpp  test_integration.cpp  test_logger.cpp
